myStack.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Create an EC2 instance

Parameters:
  SSHLocation:
    Description: IP for SSH access
    Type: String
    Default: 58.11.11.14/32
  NvmUrl:
    Description: URL for nvm install
    Type: String
    Default: "https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.4/install.sh"

Resources:
  MyEC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: "ami-0a481e6d13af82399"
      InstanceType: "t2.micro"
      KeyName: "EC2 Tutorial"
      SecurityGroups:
        - !Ref MySecurityGroup
      Tags:
        - Key: "Name"
          Value: "WebSimple"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          curl -o- ${NvmUrl} | bash
          export NVM_DIR="$HOME/.nvm"
          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
          nvm install --lts

          cat <<EOF >> /home/ec2-user/.bashrc
          export NVM_DIR="/.nvm"
          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
          EOF
  MySecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: web-simple
      GroupDescription: Enable HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
  CodeDeployApplication:
    Type: AWS::CodeDeploy::Application
    Properties:
      ApplicationName: Web-simple
      ComputePlatform: Server
  DeploymentGroup:
    Type: AWS::CodeDeploy::DeploymentGroup
    Properties:
      ApplicationName: !Ref CodeDeployApplication
      DeploymentConfigName: CodeDeployDefault.AllAtOnce
      DeploymentGroupName: Web-simple-group
      ServiceRoleArn: arn:aws:iam::868133316193:role/CodeDeployServiceRole
      Ec2TagSet:
        - Ec2TagGroup:
            - Key: Name
              Value: WebSimple
              Type: KEY_AND_VALUE
